--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo_zara.svg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <link href="dist/hamburgers.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/style.css">
+    <link href="../static/dist/hamburgers.css" rel="stylesheet">
     <title>ZARA</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
                 </span>
               </button>
         </div>
-        <div class="logo"><a href=""><img src="img/logo_zara.svg" alt=""></a></div>
+        <div class="logo"><a href=""><img src="../static/img/logo_zara.svg" alt=""></a></div>
         <nav class="menu">
             <a href="#">BUSCAR</a>
             <a href="#">INICIAR SESIÓN</a>
@@ -28,7 +28,7 @@
     </header>
     <main class="container">
         <div class="image-container">
-            <img src="capzara.PNG" alt="ZARA Campaña">
+            <img src="" alt="ZARA Campaña">
         </div>
         <p>MIRAR AHORA</p>
     </main>
