--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             <a href="#">BUSCAR</a>
             <a href="{{ url_for('login') }}">INICIAR SESIÓN</a>
             <a href="#">AYUDA</a>
-            <a href="#">CESTA[0]</a>
+            <a href="{{ url_for('cesta') }}">CESTA[0]</a>
         </nav>
     </header>
     <main class="container">
