--- a/templates/login.html
+++ b/templates/login.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo_zara.svg" type="image/x-icon">
-    
-    
     <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/iniciar.css">
     <link href="../static/dist/hamburgers.css" rel="stylesheet">
     <title>ZARA</title>
 </head>
@@ -19,7 +18,7 @@
                 </span>
             </button>
         </div>
-        <div class="logo"><a href=""><img src="../static/img/logo_zara.svg" alt=""></a></div>
+        <div class="logo"><a href="./"><img src="../static/img/logo_zara.svg" alt=""></a></div>
         <nav class="menu">
             <a href="#">BUSCAR</a>
             <a href="{{ url_for('login') }}">INICIAR SESIÓN</a>
@@ -40,13 +39,13 @@
     
     <main class="content">
         <section class="info">
-            <h2>EXHIBITION DE EXPERIENCIA</h2>
-            <p>Idícate a disfrutar de una experiencia personalizada y acceder a todos nuestros servicios.</p>
-            <button class="black-btn">INICIAR SESION</button>
-            <button class="white-btn">REGISTRAR</button>
+            <h2>DISFRUTA LA MEJOR EXPERIENCIA</h2>
+            <p>Identifícate para disfrutar de una experiencia personalizada y acceder a todos nuestros servicios.</p>
+            <button class="black-btn">INICIAR SESIÓN</button>
+            <button class="white-btn">REGÍSTRATE</button>
         </section>
-        <section class="image-gallery">
-            <img src="static/img/img iniciozara.jpg" alt="Fashion Model">
+        <section class="imagen-login">
+            <img src="static/img/img iniciozara.jpg">
         </section>
     </main>
 </body>
