--- a/static/iniciar.css
+++ b/static/iniciar.css
@@ -1,40 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 20px 40px;
-    border-bottom: 1px solid #000;
-}
-
-.menu-icon {
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-    cursor: pointer;
-}
-
-.menu-icon div {
-    width: 30px;
-    height: 2px;
-    background-color: black;
-}
-
-.logo {
-    align-self: left;
-    flex-grow: 1;
-    margin-left: 40px;
-}
-
 .nav {
     display: flex;
     gap: 20px;
@@ -44,7 +7,7 @@ body {
 .nav a {
     text-decoration: none;
     color: black;
-    text-transform: uppercase;
+
     position: relative;
 }
 
@@ -58,20 +21,25 @@ body {
 }
 
 .content {
+    padding-top: 50px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 50px;
-    width: 90%;
+    justify-content: center;
+    margin: auto;
+    padding-inline: 150px;
+    width: 100%;
+    font-size: 0.9rem;
+    font-weight: 250;
+    letter-spacing: 0.7px;
 }
 
-.info {
-    max-width: 40%;
 
-}
 
 h2 {
-    font-size: 20px;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    font-weight: 300;
 }
 
 .black-btn, .white-btn {
@@ -94,6 +62,16 @@ h2 {
     color: black;
 }
 
-.image-gallery img {
-    max-width: 100%;
+.info{
+    margin-bottom: auto;
+    width: 30%;
+    padding-right: 15px;
+}
+
+.imagen-login{
+    width: 80%;
+}
+
+.imagen-login>img{
+    width: 55vw;
 }
