--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,30 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    overflow-y: scroll;
+    margin-right: -10px;
+    scrollbar-gutter: stable;
+
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
 
 a{
     text-decoration: none;
@@ -18,7 +41,9 @@ a{
     justify-content: space-between;
     align-items: center;
     padding: 20px 40px;
-    border-bottom: 1px solid #ddd;
+    position: sticky;
+    top: 0;
+    
 }
 .menu-icon {
     font-size: 32px;
@@ -26,6 +51,17 @@ a{
     font-weight: bold;
     margin-right: 20px;
 }
+
+.menu>a{
+    transition: 0.3s;
+    
+}
+
+.menu>a:hover{
+    text-shadow: 0px 0px 3px rgba(0,0,0,0.4);
+    
+}
+
 .logo {
 
     align-self: left;
@@ -39,7 +75,9 @@ a{
 .menu a {
     text-decoration: none;
     color: black;
-    font-size: 16px;
+    font-size: 0.9rem;
+    font-weight: 200;
+    letter-spacing: 1px;
 }
 .container {
     text-align: center;
@@ -53,24 +91,31 @@ a{
 .menu-left{
     font-weight: 500;
     font-family: "Helvetica Neue";
-    visibility: none;
+
     width: 30vw;
     height: 100vh;
-    display: none;
+    display: block;
     background-color: rgb(255, 255, 255);
-    position: sticky;
-    left: 0;
-    opacity: 0;
+
+    position: fixed;
+    
     padding: 5px;
     transition: 0.6s;
     transform: translateX(-2vw);
+    pointer-events: none;
+    opacity: 0;
 }
 
 .menu-left.open{
+    transition-behavior: allow-discrete;
     display: block;
     opacity: 1;
     transform: translateX(0);
+    transition: 0.6s;
+    pointer-events: all;
 }
+
+
 
 .menu-left.inside{
     display: flex;
@@ -90,3 +135,4 @@ ul.menu-list{
     margin-right: 25px;
     color: rgb(45, 45, 45);
 }
+
