--- a/static/style.css
+++ b/static/style.css
@@ -53,12 +53,13 @@ a{
 }
 
 .menu>a{
-    transition: 0.3s;
+    transition: 0.15s;
     
 }
 
 .menu>a:hover{
-    text-shadow: 0px 0px 3px rgba(0,0,0,0.4);
+
+    text-shadow: 0px 0px 1px #000000;
     
 }
 
