--- a/templates/cesta.html
+++ b/templates/cesta.html
@@ -19,9 +19,7 @@
             </button>
         </div>
 
-        <div class="logo">
-            <img src="../static/img/logo_zara.svg" alt="ZARA">
-        </div>
+        <div class="logo"><a href="./"><img src="../static/img/logo_zara.svg" alt=""></a></div>
 
         
         <div class="search-bar">
