--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,10 @@
         </nav>
     </header>
 
+    <div class="video">
+        <video src="../static/img/video_inicio.mp4" autoplay muted loop playsinline></video>
+    </div>
+
     <div class="menu-left">
         <div class="menu-left-inside">
             <ul class="menu-list">
