--- a/templates/index.html
+++ b/templates/index.html
@@ -20,15 +20,13 @@
         <div class="logo"><a href="./"><img src="../static/img/logo_zara.svg" alt=""></a></div>
         <nav class="menu">
             <a href="#">BUSCAR</a>
-            <a href="{{ url_for('login') }}">INICIAR SESIÓN</a>
+            <a href="{{ url_for('loginselect') }}">INICIAR SESIÓN</a>
             <a href="#">AYUDA</a>
             <a href="{{ url_for('cesta') }}">CESTA[0]</a>
         </nav>
     </header>
 
-    <div class="video">
-        <video src="../static/img/video_inicio.mp4" autoplay muted loop playsinline></video>
-    </div>
+    
 
     <div class="menu-left">
         <div class="menu-left-inside">
@@ -40,11 +38,11 @@
         </div>
     </div>
 
-    <main class="container">
-        <div class="image-container">
-            <img src="" alt="ZARA Campaña">
+    <main class="content">
+        <div class="video">
+            <video src="../static/img/video_inicio.mp4" autoplay muted loop playsinline></video>
         </div>
-        <p>MIRAR AHORA</p>
+
         
     </main>
 
