--- a/templates/cuenta.html
+++ b/templates/cuenta.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo_zara.svg" type="image/x-icon">
     <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="../static/iniciar.css">
+    <link rel="stylesheet" href="../static/cuenta.css">
     <link href="../static/dist/hamburgers.css" rel="stylesheet">
     <title>ZARA</title>
 </head>
@@ -19,6 +19,7 @@
             </ul>
         </div>
     </div>
+
     <header class="header">
         <div class="menu-icon">
             <button class="hamburger hamburger--slider" type="button">
@@ -30,25 +31,36 @@
         <div class="logo"><a href="./"><img src="../static/img/logo_zara.svg" alt=""></a></div>
         <nav class="menu">
             <a href="#">BUSCAR</a>
-            <a href="{{ url_for('login') }}">INICIAR SESIÓN</a>
+            {% if session.user_id %}
+                <a href="{{ url_for('cuenta') }}">CUENTA</a>
+            {% else %}
+                <a href="{{ url_for('loginselect') }}">INICIAR SESIÓN</a>
+            {% endif %}
+
+            
             <a href="#">AYUDA</a>
             <a href="{{ url_for('cesta') }}">CESTA[0]</a>
         </nav>
     </header>
 
-
     
-    <main class="content">
-        <section class="info">
-            <h2>DISFRUTA LA MEJOR EXPERIENCIA</h2>
-            <p>Identifícate para disfrutar de una experiencia personalizada y acceder a todos nuestros servicios.</p>
-            <a href="{{ url_for('login') }}"><button class="black-btn">INICIAR SESIÓN</button></a>
-            <a href="{{ url_for('register') }}"><button class="white-btn">REGÍSTRATE</button></a>
-        </section>
-        <section class="imagen-login">
-            <img src="static/img/img iniciozara.jpg">
-        </section>
-    </main>
+        
+    <div class="content">
+        <div class="details">
+            <h1>Tu cuenta</h1>
+            <h2>Correo: {{ session.user_email }}</h2>
+            <a href="{{ url_for('logout') }}"><button class="white-btn">Cerrar Sesión</button></a>
+        </div>
+    </div>
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <p class="{{ category }}">{{ message }}</p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
 </body>
 <script>
     var hamburger = document.querySelector(".hamburger");
@@ -59,5 +71,4 @@
 
     });
 </script>
-
 </html>
