--- a/templates/register.html
+++ b/templates/register.html
@@ -40,7 +40,9 @@
     <h2>Registro</h2>
     <form method="POST">
         <input type="email" name="email" placeholder="Correo" required>
+        <input type="text" name="name" placeholder="Nombre" required>
         <input type="password" name="password" placeholder="Contraseña" required>
+        
         <button type="submit">Registrarse</button>
     </form>
     <a href="{{ url_for('login') }}">¿Ya tienes cuenta? Inicia sesión</a>
