--- a/templates/cuenta.html
+++ b/templates/cuenta.html
@@ -38,7 +38,7 @@
             {% endif %}
 
             
-            <a href="#">AYUDA</a>
+            <a href="{{ url_for('ayuda') }}">AYUDA</a>
             <a href="{{ url_for('cesta') }}">CESTA[0]</a>
         </nav>
     </header>
