--- a/templates/login-select.html
+++ b/templates/login-select.html
@@ -31,7 +31,7 @@
         <nav class="menu">
             <a href="#">BUSCAR</a>
             <a href="{{ url_for('loginselect') }}" class="active">INICIAR SESIÓN</a>
-            <a href="#">AYUDA</a>
+            <a href="{{ url_for('ayuda') }}">AYUDA</a>
             <a href="{{ url_for('cesta') }}">CESTA[0]</a>
         </nav>
     </header>
