--- a/static/login.css
+++ b/static/login.css
@@ -52,3 +52,45 @@ input::placeholder{
 input:focus{
     border-bottom: 1px solid black;
 }
+
+a.redirect{
+    font-family: "Helvetica Neue";
+    font-weight: 300;
+    letter-spacing: 1px;
+    font-size: 0.9rem;
+}
+
+a.redirect:hover{
+    
+    
+    text-decoration: underline;
+
+}
+
+.white-btn {
+
+    font-weight: 300;
+    font-family: "Helvetica Neue";
+    display: block;
+    width: 150px;
+    padding: 10px;
+    margin-top: 35px;
+    border: 1px solid black;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+
+.white-btn {
+    background-color: white;
+    color: black;
+    transition: 0.2s;
+}
+
+.white-btn:hover{
+    background-color: black;
+    color: white;
+    transform: scale(1.03);
+    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
+    letter-spacing: 0.4px;
+}
