--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,10 @@
         </div>
 
         
+        <hr>
+        <section class="productos">
+            <h2>Productos</h2>
+        </section>
     </main>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
