--- a/static/cuenta.css
+++ b/static/cuenta.css
@@ -1,9 +1,10 @@
 .content {
     padding-top: 50px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 40vh;
+
     margin: auto;
     width: 100%;
     font-size: 0.9rem;
@@ -14,8 +15,8 @@
 .details{
     width: 25%;
     border: 2px gray solid;
-
-    height: 25vh;
+    margin-bottom: 50px;
+    height: 30vh;
     padding: 25px;
     padding-top: 15px;
     box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.25);
