--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,7 @@ body {
     overflow-y: scroll;
     margin-right: -10px;
     scrollbar-gutter: stable;
+    margin-bottom: 5vh;
 
 }
 
@@ -192,9 +193,35 @@ hr{
 section.productos{
     width: 75%;
     display: flex;
+    flex-direction: column;
     margin: auto;
+}
+
+.productos-container{
+    display: flex;
+    
 }
 
 h2{
     letter-spacing: 1px;
+    font-weight: 300;
+}
+
+.product-card{
+    height: 300px;
+    width: 220px;
+    border: 2px solid black;
+    flex-direction: column;
+    display: flex;
+    margin: auto;
+    margin-inline: 20px;
+    text-align: center;
+
+}
+
+.product-img>img{
+    object-fit: contain;
+    width: 100%;
+    height: 300px;
+    
 }
