--- a/templates/gestionar.html
+++ b/templates/gestionar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo_zara.svg" type="image/x-icon">
     <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/gestionar.css">
     <link href="../static/dist/hamburgers.css" rel="stylesheet">
     <title>ZARA</title>
 </head>
@@ -51,35 +52,54 @@
 
     
     <main class="content">
-        <div class="video">
-            <video src="../static/img/video_inicio.mp4" autoplay muted loop playsinline></video>
-        </div>
-
-        
-        <hr>
-        <section class="productos">
-            <h2>Productos</h2> <br>
-
-        <div class="productos-container">
 
 
-            {% for producto in productos %}
+    <h1>Gestión de Productos y Categorías</h1>
+    <h3><a href="{{ url_for('crear_producto')}}">Crear Producto</a></h3>
+    <h3><a href="{{ url_for('crear_categoria')}}">Crear Categoría</a></h3>
 
-                <div class="product-card">
-                    <div class="product-img">
-                        <img src="{{ producto.imagen }}" alt="{{ producto.nombre }}">
-                    </div>
-                    
-                    <div class="product-name">{{ producto.nombre }}</div>
-                    <div class="product-price">{{ producto.precio }} EUR</div>
+    <h2>Productos</h2>
+    <table>
+        <tr>
+            <th>Nombre</th>
+            <th>Descripción</th>
+            <th>Categoría</th>
+            <th>Precio</th>
+            <th>Acciones</th>
+        </tr>
+        {% for producto in productos %}
+        <tr>
+            <td>{{ producto.nombre }}</td>
+            <td>{{ producto.descripcion }}</td>
+            <td>{{ producto.categoria.nombre }}</td>
+            <td>{{ producto.precio }}</td>
+            <td>{{ 'Sí' if producto.disponibilidad else 'No' }}</td>
+            <td>
+                <form method="POST" action="{{ url_for('eliminar_producto', producto_id=producto.id) }}">
+                    <button type="submit">Eliminar</button>
+                </form>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
 
-                </div>
-            
-            {% endfor %}
-        </div>
-
-        </section>
-    </main>
+    <h2>Categorías</h2>
+    <table>
+        <tr>
+            <th>Nombre</th>
+            <th>Acciones</th>
+        </tr>
+        {% for categoria in categorias %}
+        <tr>
+            <td>{{ categoria.nombre }}</td>
+            <td>
+                <form method="POST" action="{{ url_for('eliminar_categoria', categoria_id=categoria.id) }}">
+                    <button type="submit">Eliminar</button>
+                </form>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -88,6 +108,10 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
+
+    </main>
+
+    
 
 </body>
 <script>
