--- a/static/style.css
+++ b/static/style.css
@@ -190,17 +190,16 @@ hr{
     border: 2px solid black;
 }
 
-section.productos{
-    width: 75%;
+section.productos {
+    width: 100%;
+    max-width: 1400px;
+    margin: 50px auto;
+    padding: 0 40px;
     display: flex;
     flex-direction: column;
-    margin: auto;
 }
 
-.productos-container{
-    display: flex;
-    
-}
+
 
 h2{
     letter-spacing: 1px;
@@ -226,14 +225,17 @@ h2{
     
 }
 
-#ani
+
 .productos-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
+    gap: 40px;
     padding: 40px;
     background-color: white;
+    margin: 0 auto;
+    max-width: 1200px;
 }
+
 
 .product-card {
     background: none;
