añadida la columna de precio
he tenido que crear de nuevo la base de datos por que no cogía la columna precios

--- a/templates/productos.html
+++ b/templates/productos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Todos los Productos</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='productos.css') }}">
+    <link rel="stylesheet" href="../static/productos.css">
 </head>
 <body>
 
