--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
                     <img src="{{ producto.imagen }}" alt="{{ producto.nombre }}">
                   </div>
                   <div class="product-name">{{ producto.nombre }}</div>
-                  <div class="product-price">{{ producto.precio }} EUR</div>
+                  <div class="product-price">{{ producto.precio }} €</div>
                   <div class="product-descripcion">{{ producto.descripcion }}</div>
                 </div>
               </a>              
