--- a/templates/detalle_producto.html
+++ b/templates/detalle_producto.html
@@ -12,7 +12,7 @@
         <div class="detalle-info">
             <h1>{{ producto.nombre }}</h1>
             <p>{{ producto.descripcion }}</p>
-            <p>{{ producto.precio }}</p>
+            <p>{{ producto.precio }} €</p>
 
             
             <form action="{{ url_for('agregar_a_cesta', producto_id=producto.id) }}" method="POST">
